--- a/src/components/markdown/CardDistributionTable.astro
+++ b/src/components/markdown/CardDistributionTable.astro
@@ -170,12 +170,13 @@ const rows = [
 
 <table
   class:list={[
+    'relative before:absolute before:inset-0 before:z-[1] before:shadow-lg before:rounded-xl before:border before:border-black/30 before:dark:border-white/30',
     'border-collapse [&_*]:border-black/30 [&_*]:dark:border-white/30',
     'not-prose w-full table-fixed text-center [&_th]:overflow-hidden [&_th]:px-0 [&_td]:px-0 [&_th]:py-1 [&_td]:py-1 leading-none [&_th]:align-middle [&_td]:align-middle',
   ]}
 >
   <thead
-    class="text-sm border sticky top-0 bg-white dark:bg-[rgb(var(--color-bg-body))] shadow"
+    class="text-sm border-b sticky top-0 bg-white dark:bg-[rgb(var(--color-bg-body))] shadow rounded-t-xl"
   >
     <tr>
       <th colspan="2">Ba<wbr />sic</th>
@@ -195,11 +196,10 @@ const rows = [
     </tr>
   </thead>
 
-  <tbody class="border">
+  <tbody>
     {
       rows.map((row, rowN) => (
         <tr
-          class="border-x"
           class:list={[
             {
               'bg-black/5 dark:bg-white/5': rowN % 2 === 0,
