--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -67,7 +67,7 @@ const { classes: classNames, hasProse, tocHeadings } = Astro.props
       class:list={[
         'content-center grid grid-in-[main]',
         hasProse &&
-          'prose mx-auto prose-sleek prose-li:m-0 prose-ul:m-0 prose-table:border-current/25 prose-h4:text-lg prose-h5:font-semibold',
+          'prose mx-auto prose-sleek prose-li:m-0 prose-ul:m-0 prose-table:border-current/25 prose-h5:font-semibold',
         classNames?.main,
       ]}
     >
