--- a/src/components/markdown/Suit.astro
+++ b/src/components/markdown/Suit.astro
@@ -1,37 +1,10 @@
 ---
-const suitEmojisById = {
-  0: '🔥',
-  1: '💧',
-  2: '⭐',
-  3: '🍀',
-  4: '🍊',
-  5: '🍆',
-  6: '💭',
-  7: '🕷️',
-  8: '🌸',
-  9: '💎',
-  10: '💩',
-  11: '🗿',
-  111: '❤️',
-  121: '🔴',
-  131: '🟥',
-  112: '💙',
-  122: '🔵',
-  132: '🟦',
-  113: '💛',
-  123: '🟡',
-  133: '🟨',
-  114: '💚',
-  124: '🟢',
-  134: '🟩',
-  115: '🖤',
-  125: '⚫️',
-  135: '⬛️',
-  145: '🌈',
-} as const
-
-type SuitEmoji = (typeof suitEmojisById)[keyof typeof suitEmojisById]
-type SuitId = keyof typeof suitEmojisById
+import {
+  type SuitId,
+  type SuitEmoji,
+  getEmojiBySuitId,
+  getSuitIdByEmoji,
+} from './suits'
 
 export interface Props {
   id?: SuitId
@@ -40,11 +13,7 @@ export interface Props {
 
 const { id, emoji } = Astro.props
 
-const suitId =
-  id ??
-  (Object.entries(suitEmojisById).find(([_, e]) => e === emoji)?.[0] as
-    | SuitId
-    | undefined)
+const suitId = id ?? (emoji ? getSuitIdByEmoji(emoji) : undefined)
 ---
 
 {
@@ -52,10 +21,10 @@ const suitId =
     <img
       src={`/images/suits/${suitId}.svg`}
       class="not-prose unset align-[-0.25em] inline-block pointer-events-none h-[1.25em]"
-      alt={suitEmojisById[suitId]}
+      alt={getEmojiBySuitId(suitId)}
       draggable="false"
     />
   ) : (
-    <span>{emoji ?? '🚫'}</span>
+    <span>🚫</span>
   )
 }
