Support md inside callout

--- a/src/components/markdown/Callout.astro
+++ b/src/components/markdown/Callout.astro
@@ -1,10 +1,9 @@
 ---
 interface Props {
-  text: string
   type: 'idea' | 'info'
 }
 
-const { text, type } = Astro.props
+const { type } = Astro.props
 ---
 
 <div class="flex bg-stone-200/50 dark:bg-slate-900 rounded-md p-2 pl-0 mt-2">
@@ -18,5 +17,7 @@ const { text, type } = Astro.props
       <i class="ti ti-info-circle px-3 text-lg text-blue-500 dark:text-blue-300" />
     )
   }
-  <div class="grow">{text}</div>
+  <div class="grow [&>:first-child]:mt-0 [&>:last-child]:mb-0">
+    <slot />
+  </div>
 </div>
