--- a/src/components/markdown/Callout.astro
+++ b/src/components/markdown/Callout.astro
@@ -9,12 +9,12 @@ const { type } = Astro.props
 <div class="flex bg-stone-100 dark:bg-slate-800 rounded-md p-2 pl-0 mt-2">
   {
     type === 'idea' && (
-      <i class="ti ti-bulb pl-2 pr-1 text-2xl text-yellow-500 dark:text-yellow-300" />
+      <i class="ti ti-bulb px-2 -mt-0.5 text-2xl text-yellow-500 dark:text-yellow-300" />
     )
   }
   {
     type === 'info' && (
-      <i class="ti ti-info-circle pl-2 pr-1 text-2xl text-blue-500 dark:text-blue-300" />
+      <i class="ti ti-info-circle px-2 -mt-0.5 text-2xl text-blue-500 dark:text-blue-300" />
     )
   }
   <div class="grow [&>:first-child]:mt-0 [&>:last-child]:mb-0 self-center">
