Margin bottom callout

--- a/src/components/markdown/Callout.astro
+++ b/src/components/markdown/Callout.astro
@@ -6,7 +6,7 @@ interface Props {
 const { type } = Astro.props
 ---
 
-<div class="flex bg-stone-100 dark:bg-slate-800 rounded-md p-2 pl-0 mt-2">
+<div class="flex bg-stone-100 dark:bg-slate-800 rounded-md p-2 pl-0 my-4">
   {
     type === 'idea' && (
       <i class="ti ti-bulb px-2 -mt-0.5 text-2xl text-yellow-500 dark:text-yellow-300" />
