Remove inline svg counters

--- a/src/components/markdown/images/CardImg.astro
+++ b/src/components/markdown/images/CardImg.astro
@@ -10,5 +10,6 @@ const { src } = Astro.props
     src={src}
     alt="card"
     class="not-prose w-full max-w-[300px] rounded-[calc(50/750*100%)/calc(50/1050*100%)] border border-stone-200 shadow-lg"
+    loading="lazy"
   />
 </div>
