Add drawing areas schema

--- a/src/components/markdown/images/CardImg.astro
+++ b/src/components/markdown/images/CardImg.astro
@@ -1,11 +1,19 @@
 ---
+import { cn } from '../../../lib/cn'
+
 interface Props {
   src: string
+  class?: string
 }
-const { src } = Astro.props
+const { src, class: className } = Astro.props
 ---
 
-<div class="flex flex-wrap items-start justify-center gap-4 mb-4">
+<div
+  class={cn([
+    'flex flex-wrap items-start justify-center gap-4 mb-4',
+    className,
+  ])}
+>
   <img
     src={src}
     alt="card"
