--- a/src/components/markdown/images/DrawingImg.astro
+++ b/src/components/markdown/images/DrawingImg.astro
@@ -2,11 +2,11 @@
 import CardImg from './CardImg.astro'
 ---
 
-<div class="flex flex-wrap justify-center gap-6 mb-4 flex-col xs:flex-row">
+<div class="flex flex-wrap justify-center gap-6 mb-4 flex-col sm:flex-row">
   <CardImg src="/images/home/drawing/drawing-areas.png" class="m-0" />
-  <div class="flex justify-center gap-4 flex-wrap items-center xs:flex-col">
+  <div class="flex justify-center gap-4 flex-wrap items-center sm:flex-col">
     <svg
-      class="h-24"
+      class="h-32"
       aria-label="hand"
       viewBox="0 0 226 215"
       fill="none"
@@ -380,7 +380,7 @@ import CardImg from './CardImg.astro'
     </svg>
 
     <svg
-      class="h-24"
+      class="h-32"
       aria-label="table"
       viewBox="0 0 266 215"
       fill="none"
