Add small buy banner and fix link styles

--- a/src/components/markdown/FeatureSummary.astro
+++ b/src/components/markdown/FeatureSummary.astro
@@ -3,7 +3,7 @@
 ---
 
 <div
-  class="prose-a:font-normal hover:prose-a:[--color-text-link:unset] prose-a:[--color-text-link:226_232_240] dark:prose-a:[--color-text-link:15_23_42]"
+  class="prose-a:font-normal [&_a_strong]:[color:var(--tw-prose-bold)] [&_a:hover_strong]:[color:inherit] hover:prose-a:[--color-text-link:unset] prose-a:[--color-text-link:226_232_240] dark:prose-a:[--color-text-link:71_85_105]"
 >
   <slot />
 </div>
