--- a/src/components/BuyBanner.astro
+++ b/src/components/BuyBanner.astro
@@ -1,18 +1,34 @@
 ---
 import LinkCard from './LinkCard.astro'
+import { cn } from '../lib/cn'
 
 interface Props {
   class?: string
+  size?: 'small' | 'large'
 }
 
-const { class: className } = Astro.props
+const { class: className, size = 'large' } = Astro.props
 ---
 
-<LinkCard
-  href="/buy"
-  title="Buy the DIY Multideck"
-  description="Get your copy of the DIY Multideck and start playing your favorite games with your friends and family."
-  cta="Buy now"
-  icon="shopping-cart"
-  class={className}
-/>
+{
+  size === 'small' ? (
+    <div class={cn('text-center', className)}>
+      <a
+        href="/buy"
+        class="unset not-prose inline-flex justify-between gap-2 items-center group p-4 leading-none bg-stone-50 border border-stone-200 rounded-lg dark:bg-gray-800 dark:border-gray-700"
+      >
+        <i class={cn(['ti ti-shopping-cart', 'text-xl leading-none'])} />
+        <span>Buy the DIY Multideck</span>
+      </a>
+    </div>
+  ) : (
+    <LinkCard
+      href="/buy"
+      title="Buy the DIY Multideck"
+      description="Get your copy of the DIY Multideck and start playing your favorite games with your friends and family."
+      cta="Buy now"
+      icon="shopping-cart"
+      class={className}
+    />
+  )
+}
