--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -39,5 +39,7 @@ const ogImageAbsoluteUrl = data.ogImagePath
     ogImageAbsoluteUrl={ogImageAbsoluteUrl}
     slot="meta"
   />
-  <Prose content={Content} />
+  <Prose>
+    <Content />
+  </Prose>
 </ContentLayout>
