Fix min-width usedCards

--- a/src/components/markdown/UsedCards.astro
+++ b/src/components/markdown/UsedCards.astro
@@ -227,7 +227,7 @@ const miniCardVersionByLayout = {
 } as const satisfies Record<Layout, 'basic' | '3d' | 'sequential'>
 ---
 
-<div class="overflow-x-auto -mx-3 sm:mx-0 px-3 sm:px-0 not-prose">
+<div class="overflow-x-auto -mx-3 sm:mx-0 px-3 sm:px-0 not-prose max-w-[100vw]">
   <div
     class="grid gap-0.5 items-center grid-cols-[repeat(var(--columns,15),minmax(2.5rem,3.5rem))] w-full mx-auto justify-center-safe"
     style={{
