--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -10,7 +10,12 @@ const { class: className } = Astro.props
 
 <div
   class={cn(
-    'prose mx-auto prose-sleek prose-li:m-0 prose-ul:m-0 prose-table:border-current/25 prose-h5:text-sm prose-h5:font-semibold prose-img:my-4 first:prose-img:mt-0 last:prose-img:mb-0 prose-li:leading-5 prose-li:my-2',
+    'prose prose-sleek',
+    'mx-auto max-w-none',
+    'prose-li:mx-0 prose-li:my-2 prose-ul:m-0 prose-li:leading-5',
+    'prose-h5:text-sm prose-h5:font-semibold',
+    'prose-img:my-4 first:prose-img:mt-0 last:prose-img:mb-0',
+    'prose-table:border-current/25',
     className
   )}
 >
