Re arange more the sections

--- a/src/pages/buy.astro
+++ b/src/pages/buy.astro
@@ -22,7 +22,7 @@ import PageLayout from '../layouts/PageLayout.astro'
       >+34 690 613 037</a
     >
      or email
-    <a href="mailto:hello@mauriciabad.com"> hello@mauriciabad.com</a>
+    <a href="mailto:diymultideck@mauri.app">diymultideck@mauri.app</a>
   </p>
 
   <h2 class="font-bold mt-4">Price</h2>
