--- a/src/components/markdown/DrawingAreaIcon.astro
+++ b/src/components/markdown/DrawingAreaIcon.astro
@@ -9,6 +9,6 @@ const { id } = Astro.props
 <img
   src={`/images/drawing-areas/${id}.svg`}
   class="not-prose unset align-[-0.25em] inline-block pointer-events-none h-[1.25em]"
-  alt={`Drawing area ${id} icon`}
+  alt={`"Drawing area ${id} icon"`}
   draggable="false"
 />
